<resources>
    <string name="app_name">Hangman, av Roger og Halvor</string>
    <string name="hangman_overskrift">Hangman</string>
    <string name="regel_overskrift">Regler</string>

    <!-- Informasjon om hva man har mulighet til på startskjemen -->
    <string name="info">Gjør hva du vil, \r\n vi driter i det, fitte</string>

    <!-- For å komme til innstillinger (Veit ikkje om nødvendig) -->
    <string name="instillinger">Innstillinger</string>
    
    <!-- Knapper StartMenu.java -->
    <string name="startSpill">Start spill</string>
    <string name="regler">Se regler</string>
    <string name="endreSprak">Endre språk</string>
    <string name="avslutt">Avslutt</string>

    <!-- Tekst Regler.java -->
    <string name="hovedmal">Unngå at Hank von Hengvete blir hengt ved å gjette ordet under!</string>
    <string name="regel1">1. Gjett ordet ved å trykke på bokstavene under.</string>
    <string name="regel2">2. Du har 6 forsøk på å gjette ordet!</string>
    <string name="regel3">3. Håp på at du ikke henger mannen :)</string>

    <!-- Tekst Avslutt-fragment -->
    <string name="ja">Ja, før meg vekk!</string>
    <string name="nei">Nei, jeg vil tortureres!</string>

    <!-- Tekst Hangman.java -->
    <string name="galge">Galge</string>
    <string name="hode">Hode</string>
    <string name="kropp">Kropp</string>
    <string name="arm">Arm</string>
    <string name="bein">Bein</string>

    <!-- Tekst til dialogbokser ved vinn eller tap -->
    <string name="tapTittel">Du tapte!</string>
    <string name="tapMelding1">
        Eiei! Du klarte ikke gjette ordet! \r\n
        Ordet du ikke klarte var
    </string>
    <string name="tapMelding2">\r\nVil du prøve et nytt ord?</string>
    <string name="tapNyttSpill">Prøv igjen!</string>
    <string name="tapTilHovedmeny">Til hovedmenyen</string>

    <string name=""></string>

</resources>
