<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <Button
        android:id="@+id/startSpill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startSpill"
        android:onClick="startSpill"
         />
    <Button
        android:id="@+id/regler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regler"
        android:onClick="regler"
        />
    <Button
        android:id="@+id/endreSprak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endreSprak"
        android:onClick="endreSprak"
        />
    <Button
        android:id="@+id/avslutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avslutt"
        android:onClick="avslutt"
        />

</LinearLayout>
