<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/galge"
        android:src="@drawable/galge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/galge" />

    <ImageView
        android:id="@+id/hode"
        android:src="@drawable/hode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hode"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="235dp"/>

    <ImageView
        android:id="@+id/armHoyre"
        android:src="@drawable/armh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arm"
        android:layout_marginTop="111dp"
        android:layout_marginLeft="263dp"/>
    <ImageView
        android:id="@+id/armVenstre"
        android:src="@drawable/armv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arm"
        android:layout_marginTop="109dp"
        android:layout_marginLeft="215dp" />
    <ImageView
        android:id="@+id/kropp"
        android:src="@drawable/kropp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kropp"
        android:layout_marginTop="104dp"
        android:layout_marginLeft="255dp"/>
    <ImageView
        android:id="@+id/beinHøyre"
        android:src="@drawable/beinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bein"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="260dp"/>
    <ImageView
        android:id="@+id/beinVenstre"
        android:src="@drawable/beinv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bein"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="218dp"/>
    <LinearLayout
        android:id="@+id/gjetteFelt"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:layout_below="@id/galge" />
    <GridView
        android:id="@+id/bokstavFelt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:numColumns="6"
        android:stretchMode="columnWidth"
        android:layout_below="@id/gjetteFelt"
        />
</RelativeLayout>
